[package]
name = "telekey"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
hostname = "0.3.1"
quick-protobuf = "0.8.0"
console = "0.15.2"
chrono = { version = "0.4.23", features = ["clock", "std"], default-features = false }
enigo = { git = "https://github.com/NaokiM03/enigo.git" }
